--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;1,300;1,400&display=swap");
-
 html,
 body {
   font-family: "IBM Plex Mono", monospace;
@@ -8,23 +7,18 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: linear-gradient(90deg, rgb(151 206 250 / 30%) 1px, transparent 1%)
-      center,
-    linear-gradient(rgb(151 206 250 / 30%) 1px, transparent 1%) center,
-    rgb(249 250 250 / 50%);
+  background: linear-gradient(90deg, rgba(151, 206, 250, 0.3) 1px, transparent 1%) center, linear-gradient(rgba(151, 206, 250, 0.3) 1px, transparent 1%) center, rgba(249, 250, 250, 0.5);
   background-size: 30px 30px;
 }
 
 .container {
   margin-top: 6rem;
 }
-
-h1 {
+.container h1 {
   margin: 2.5rem auto;
   width: 40%;
 }
-
-#list {
+.container #list {
   width: 40%;
   text-align: center;
   display: flex;
@@ -34,27 +28,23 @@ h1 {
   margin: 0px auto;
   padding: 0px 2rem;
 }
-
-li {
+.container #list li {
   padding: 1rem;
   position: relative;
   display: flex;
   align-items: center;
 }
-
-li label {
+.container #list li label {
   position: relative;
   display: flex;
   align-items: center;
 }
-
-input[type="checkbox"] {
+.container #list li label input[type=checkbox] {
   height: 0;
   width: 0;
   margin-right: 1.5rem;
 }
-
-.checkbox {
+.container #list li label .checkbox {
   position: absolute;
   top: 50%;
   left: 0;
@@ -65,8 +55,7 @@ input[type="checkbox"] {
   cursor: pointer;
   overflow: hidden;
 }
-
-.checked::before {
+.container #list li label .checked::before {
   content: "";
   display: block;
   position: absolute;
@@ -79,8 +68,7 @@ input[type="checkbox"] {
   transform-origin: top left;
   transform: translate(28%, -75%) rotate(45deg);
 }
-
-.checked::after {
+.container #list li label .checked::after {
   content: "";
   display: block;
   position: absolute;
@@ -93,18 +81,24 @@ input[type="checkbox"] {
   transform-origin: bottom left;
   transform: translate(-25%, 0) rotate(315deg);
 }
-
-li span {
+.container #list li label span {
   display: block;
   text-align: left;
   word-break: break-word;
 }
-
-.insert-section {
+.container #list li label button {
+  border: none;
+  background: transparent;
+  margin-left: 1.5rem;
+}
+.container #list li label button .delete-icon:hover {
+  cursor: pointer;
+}
+.container .insert-section {
   width: 40%;
   margin: 2rem auto;
 }
-.add-todo {
+.container .insert-section .add-todo {
   background: transparent;
   outline: none;
   border: none;
@@ -115,17 +109,15 @@ li span {
   font-style: italic;
   width: 50%;
 }
-
-.add-todo::placeholder {
+.container .insert-section .add-todo::placeholder {
   font-family: "IBM Plex Mono", monospace;
   font-style: italic;
   color: black;
   font-size: 1rem;
 }
-
-.add-to:focus {
+.container .insert-section .add-todo:focus {
   outline: none;
-  background: rgb(61 61 61 / 10%);
+  background: rgba(61, 61, 61, 0.1);
 }
 
 .highlight {
@@ -133,12 +125,4 @@ li span {
   text-decoration: line-through 3px rgb(192, 25, 25);
 }
 
-button {
-  border: none;
-  background: transparent;
-  margin-left: 1.5rem;
-}
-
-.delete-icon:hover {
-  cursor: pointer;
-}
+/*# sourceMappingURL=index.css.map */
